// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[SNAPSHOT][Componentes][Common][Animate] - Animación de entrada y salida. Debe pintar el envolvente correctamente con los siguientes valores: type="fade"; from="bottom"; executeWhen="isMounted". 1`] = `
.c0 {
  box-sizing: border-box;
  display: block;
  height: auto;
  margin: 0px;
  opacity: 0;
  padding: 0px;
  position: absolute;
  width: auto;
  -webkit-animation: illfdG 0.6s ease-out forwards;
  animation: illfdG 0.6s ease-out forwards;
}

<div
  className="c0"
  from="left"
  type="fade"
>
  <div
    style={
      Object {
        "backgroundColor": "#8394DE",
        "height": "100px",
        "width": "100px",
      }
    }
  />
</div>
`;

exports[`[SNAPSHOT][Componentes][Common][Animate] - Animación de entrada y salida. Debe pintar el envolvente correctamente con los siguientes valores: type="fade"; from="left"; executeWhen="isMounted". 1`] = `
.c0 {
  box-sizing: border-box;
  display: block;
  height: auto;
  margin: 0px;
  opacity: 0;
  padding: 0px;
  position: absolute;
  width: auto;
  -webkit-animation: illfdG 0.6s ease-out forwards;
  animation: illfdG 0.6s ease-out forwards;
}

<div
  className="c0"
  from="left"
  type="fade"
>
  <div
    style={
      Object {
        "backgroundColor": "#8394DE",
        "height": "100px",
        "width": "100px",
      }
    }
  />
</div>
`;

exports[`[SNAPSHOT][Componentes][Common][Animate] - Animación de entrada y salida. Debe pintar el envolvente correctamente con los siguientes valores: type="fade"; from="right"; executeWhen="isMounted". 1`] = `
.c0 {
  box-sizing: border-box;
  display: block;
  height: auto;
  margin: 0px;
  opacity: 0;
  padding: 0px;
  position: absolute;
  width: auto;
  -webkit-animation: illfdG 0.6s ease-out forwards;
  animation: illfdG 0.6s ease-out forwards;
}

<div
  className="c0"
  from="left"
  type="fade"
>
  <div
    style={
      Object {
        "backgroundColor": "#8394DE",
        "height": "100px",
        "width": "100px",
      }
    }
  />
</div>
`;

exports[`[SNAPSHOT][Componentes][Common][Animate] - Animación de entrada y salida. Debe pintar el envolvente correctamente con los siguientes valores: type="fade"; from="right"; executeWhen="isMounted". 2`] = `
.c0 {
  box-sizing: border-box;
  display: block;
  height: auto;
  margin: 0px;
  opacity: 0;
  padding: 0px;
  position: absolute;
  width: auto;
  -webkit-animation: clnhuv 0.6s ease-out forwards;
  animation: clnhuv 0.6s ease-out forwards;
}

<div
  className="c0"
  from="top"
  type="zoom"
>
  <div
    style={
      Object {
        "backgroundColor": "#8394DE",
        "height": "100px",
        "width": "100px",
      }
    }
  />
</div>
`;

exports[`[SNAPSHOT][Componentes][Common][Animate] - Animación de entrada y salida. Debe pintar el envolvente correctamente con los siguientes valores: type="fade"; from="top"; executeWhen="isMounted". 1`] = `
.c0 {
  box-sizing: border-box;
  display: block;
  height: auto;
  margin: 0px;
  opacity: 0;
  padding: 0px;
  position: absolute;
  width: auto;
  -webkit-animation: illfdG 0.6s ease-out forwards;
  animation: illfdG 0.6s ease-out forwards;
}

<div
  className="c0"
  from="left"
  type="fade"
>
  <div
    style={
      Object {
        "backgroundColor": "#8394DE",
        "height": "100px",
        "width": "100px",
      }
    }
  />
</div>
`;

exports[`[SNAPSHOT][Componentes][Common][Animate] - Animación de entrada y salida. Debe pintar el envolvente correctamente con los siguientes valores: type="flip"; from="horizontal"; executeWhen="isMounted". 1`] = `
.c0 {
  box-sizing: border-box;
  display: block;
  height: auto;
  margin: 0px;
  opacity: 0;
  padding: 0px;
  position: absolute;
  width: auto;
  -webkit-animation: kfgWiT 0.6s ease-out forwards;
  animation: kfgWiT 0.6s ease-out forwards;
}

<div
  className="c0"
  from="horizontal"
  type="flip"
>
  <div
    style={
      Object {
        "backgroundColor": "#8394DE",
        "height": "100px",
        "width": "100px",
      }
    }
  />
</div>
`;

exports[`[SNAPSHOT][Componentes][Common][Animate] - Animación de entrada y salida. Debe pintar el envolvente correctamente con los siguientes valores: type="flip"; from="vertical"; executeWhen="isMounted". 1`] = `
.c0 {
  box-sizing: border-box;
  display: block;
  height: auto;
  margin: 0px;
  opacity: 0;
  padding: 0px;
  position: absolute;
  width: auto;
  -webkit-animation: cIQIjT 0.6s ease-out forwards;
  animation: cIQIjT 0.6s ease-out forwards;
}

<div
  className="c0"
  from="vertical"
  type="flip"
>
  <div
    style={
      Object {
        "backgroundColor": "#8394DE",
        "height": "100px",
        "width": "100px",
      }
    }
  />
</div>
`;

exports[`[SNAPSHOT][Componentes][Common][FlipCard] - Tarjeta de doble cara. Debe pintar la tarjeta correctamente. 1`] = `
.c0 {
  box-sizing: border-box;
  display: block;
  height: auto;
  margin: 0px;
  padding: 0px;
  position: relative;
  width: 100%;
  -webkit-transform-style: preserve-3d;
  -ms-transform-style: preserve-3d;
  transform-style: preserve-3d;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
}

.c0:after {
  clear: both;
  content: "";
  display: table;
}

.c1 {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  box-sizing: border-box;
  display: inline-block;
  height: auto;
  margin: 0px;
  padding: 0px;
  width: 100%;
}

.c2 {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  box-sizing: border-box;
  display: inline-block;
  height: auto;
  margin: 0px;
  padding: 0px;
  width: 100%;
  left: 0px;
  position: absolute;
  top: 0px;
  -webkit-transform: rotateY(180deg);
  -ms-transform: rotateY(180deg);
  transform: rotateY(180deg);
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label>
      FRONT
    </label>
  </div>
  <div
    className="c2"
  >
    <label>
      BACK
    </label>
  </div>
</div>
`;

exports[`[SNAPSHOT][Componentes][Common][Loading] - Animación "Loading...". Debe pintar el componente correctamente. 1`] = `
.c0 {
  height: 50px;
  margin: 0 auto;
  position: relative;
  width: 50px;
}

.c1 {
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
}

.c1:before {
  background-color: #CDCDCD;
  border-radius: 100%;
  content: '';
  display: block;
  height: 15%;
  margin: 0 auto;
  width: 15%;
  -webkit-animation: elJemf 1.2s infinite ease-in-out both;
  -webkit-animation: elJemf 1.2s infinite ease-in-out both;
  animation: elJemf 1.2s infinite ease-in-out both;
}

.c1:nth-child(2) {
  -webkit-transform: rotate(30deg);
  -ms-transform: rotate(30deg);
  -webkit-transform: rotate(30deg);
  -ms-transform: rotate(30deg);
  transform: rotate(30deg);
}

.c1:nth-child(2):before {
  -webkit-animation-delay: -1.1s;
  -webkit-animation-delay: -1.1s;
  animation-delay: -1.1s;
}

.c1:nth-child(3) {
  -webkit-transform: rotate(60deg);
  -ms-transform: rotate(60deg);
  -webkit-transform: rotate(60deg);
  -ms-transform: rotate(60deg);
  transform: rotate(60deg);
}

.c1:nth-child(3):before {
  -webkit-animation-delay: -1s;
  -webkit-animation-delay: -1s;
  animation-delay: -1s;
}

.c1:nth-child(4) {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.c1:nth-child(4):before {
  -webkit-animation-delay: -0.9s;
  -webkit-animation-delay: -0.9s;
  animation-delay: -0.9s;
}

.c1:nth-child(5) {
  -webkit-transform: rotate(120deg);
  -ms-transform: rotate(120deg);
  -webkit-transform: rotate(120deg);
  -ms-transform: rotate(120deg);
  transform: rotate(120deg);
}

.c1:nth-child(5):before {
  -webkit-animation-delay: -0.8s;
  -webkit-animation-delay: -0.8s;
  animation-delay: -0.8s;
}

.c1:nth-child(6) {
  -webkit-transform: rotate(150deg);
  -ms-transform: rotate(150deg);
  -webkit-transform: rotate(150deg);
  -ms-transform: rotate(150deg);
  transform: rotate(150deg);
}

.c1:nth-child(6):before {
  -webkit-animation-delay: -0.7s;
  -webkit-animation-delay: -0.7s;
  animation-delay: -0.7s;
}

.c1:nth-child(7) {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c1:nth-child(7):before {
  -webkit-animation-delay: -0.6s;
  -webkit-animation-delay: -0.6s;
  animation-delay: -0.6s;
}

.c1:nth-child(8) {
  -webkit-transform: rotate(210deg);
  -ms-transform: rotate(210deg);
  -webkit-transform: rotate(210deg);
  -ms-transform: rotate(210deg);
  transform: rotate(210deg);
}

.c1:nth-child(8):before {
  -webkit-animation-delay: -0.5s;
  -webkit-animation-delay: -0.5s;
  animation-delay: -0.5s;
}

.c1:nth-child(9) {
  -webkit-transform: rotate(240deg);
  -ms-transform: rotate(240deg);
  -webkit-transform: rotate(240deg);
  -ms-transform: rotate(240deg);
  transform: rotate(240deg);
}

.c1:nth-child(9):before {
  -webkit-animation-delay: -0.4s;
  -webkit-animation-delay: -0.4s;
  animation-delay: -0.4s;
}

.c1:nth-child(10) {
  -webkit-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  -webkit-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
}

.c1:nth-child(10):before {
  -webkit-animation-delay: -0.3s;
  -webkit-animation-delay: -0.3s;
  animation-delay: -0.3s;
}

.c1:nth-child(11) {
  -webkit-transform: rotate(300deg);
  -ms-transform: rotate(300deg);
  -webkit-transform: rotate(300deg);
  -ms-transform: rotate(300deg);
  transform: rotate(300deg);
}

.c1:nth-child(11):before {
  -webkit-animation-delay: -0.2s;
  -webkit-animation-delay: -0.2s;
  animation-delay: -0.2s;
}

.c1:nth-child(12) {
  -webkit-transform: rotate(330deg);
  -ms-transform: rotate(330deg);
  -webkit-transform: rotate(330deg);
  -ms-transform: rotate(330deg);
  transform: rotate(330deg);
}

.c1:nth-child(12):before {
  -webkit-animation-delay: -0.1s;
  -webkit-animation-delay: -0.1s;
  animation-delay: -0.1s;
}

<div
  className="c0"
  height={50}
  width={50}
>
  <div
    className="c1"
  />
  <div
    className="c1"
  />
  <div
    className="c1"
  />
  <div
    className="c1"
  />
  <div
    className="c1"
  />
  <div
    className="c1"
  />
  <div
    className="c1"
  />
  <div
    className="c1"
  />
  <div
    className="c1"
  />
  <div
    className="c1"
  />
  <div
    className="c1"
  />
  <div
    className="c1"
  />
</div>
`;
